Updated Regression screens

--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -131,9 +131,14 @@
     "components-header--basic-header": "http://localhost:6006/iframe.html?id=components-header--basic-header",
     "components-header--search-global": "http://localhost:6006/iframe.html?id=components-header--search-global",
     "components-header--search-local": "http://localhost:6006/iframe.html?id=components-header--search-local",
-    "components-hero--default-hero": "http://localhost:6006/iframe.html?id=components-hero--default-hero",
-    "components-hero--feature-hero": "http://localhost:6006/iframe.html?id=components-hero--feature-hero",
-    "components-hero--large-hero": "http://localhost:6006/iframe.html?id=components-hero--large-hero",
+    "components-hero-basic--hero-basic": "http://localhost:6006/iframe.html?id=components-hero-basic--hero-basic",
+    "components-hero-basic--basic": "http://localhost:6006/iframe.html?id=components-hero-basic--basic",
+    "components-hero-basic--program": "http://localhost:6006/iframe.html?id=components-hero-basic--program",
+    "components-hero-basic--plan": "http://localhost:6006/iframe.html?id=components-hero-basic--plan",
+    "components-hero--hero": "http://localhost:6006/iframe.html?id=components-hero--hero",
+    "components-hero--home": "http://localhost:6006/iframe.html?id=components-hero--home",
+    "components-hero--level-1": "http://localhost:6006/iframe.html?id=components-hero--level-1",
+    "components-hero--level-2": "http://localhost:6006/iframe.html?id=components-hero--level-2",
     "components-icon--icon": "http://localhost:6006/iframe.html?id=components-icon--icon",
     "components-lists--all": "http://localhost:6006/iframe.html?id=components-lists--all",
     "components-loading-spinner--loading-spinner": "http://localhost:6006/iframe.html?id=components-loading-spinner--loading-spinner",
@@ -189,6 +194,9 @@
     "deliverables-uq-maps-5-slide-drawer--expanded": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-5-slide-drawer--expanded",
     "deliverables-uq-maps-6-app-info-drawer--closed": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-6-app-info-drawer--closed",
     "deliverables-uq-maps-6-app-info-drawer--open": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-6-app-info-drawer--open",
+    "templates-home--home": "http://localhost:6006/iframe.html?id=templates-home--home",
+    "templates-level-1--level-1": "http://localhost:6006/iframe.html?id=templates-level-1--level-1",
+    "templates-level-2--level-2": "http://localhost:6006/iframe.html?id=templates-level-2--level-2",
     "legacy-footer--footer": "http://localhost:6006/iframe.html?id=legacy-footer--footer",
     "legacy-header--header": "http://localhost:6006/iframe.html?id=legacy-header--header"
   },
