--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -41,6 +41,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.1.1"
+    "@uqds/core": "^1.2.0-alpha.0"
   }
 }
