--- a/packages/sections/package.json
+++ b/packages/sections/package.json
@@ -40,7 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.0",
-    "@uqds/grid": "^0.0.15-alpha.2"
+    "@uqds/core": "^1.2.0-alpha.0"
   }
 }
