--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
+    "@uqds/alert": "^1.2.0-alpha.0",
     "babel-jest": "^29.4.1",
     "cli-progress": "^3.11.2",
     "core-js": "^3.27.2",
