chore: update breadcrumbs css, add play interactions and tidy up breadcrumbs story

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -20,6 +20,7 @@
     "@material/circular-progress": "^8.0.0",
     "@storybook/addon-a11y": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addons": "^6.5.15",
     "@storybook/html": "^6.5.15",
     "@storybook/test-runner": "^0.9.2",
