--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           args: --acl public-read --follow-symlinks
         env:
-          AWS_S3_BUCKET: uq-ds-regsuit
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_TOOLS }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SOURCE_DIR: 'packages/storybook-html/storybook-static'
