--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/stream": "^3.0.0",
-    "@testing-library/dom": "^8.20.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/user-event": "^14.4.3",
     "@uqds/alert": "^1.2.0-alpha.0",
-    "babel-jest": "^29.4.1",
+    "@vitest/ui": "^1.3.1",
     "cli-progress": "^3.11.2",
     "core-js": "^3.27.2",
     "eslint": "^8.32.0",
@@ -50,12 +50,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
-    "jest": "^29.4.1",
-    "jest-axe": "^7.0.0",
-    "jest-environment-jsdom": "^29.4.1",
-    "jsdom": "^21.1.0",
     "lerna": "^6.6.2",
-    "msw": "^1.0.0",
+    "msw": "^2.2.1",
     "prettier": "2.8.3",
     "puppeteer": "^19.5.2",
     "reg-keygen-git-hash-plugin": "^0.12.1",
@@ -72,6 +68,7 @@
     "stylelint-scss": "^4.3.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
+    "vitest": "^1.3.1",
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
@@ -80,14 +77,16 @@
     "lint-js": "eslint --ext .js,.jsx .",
     "lint-css": "stylelint \"**/*.{css,scss}\"",
     "lint-fix": "npm run format && npm run lint-js -- --fix && npm run lint-css -- --fix",
-    "test": "jest",
+    "test": "vitest run",
+    "test-ui": "vitest --ui",
+    "test-watch": "vitest",
     "update-screenshots": "node scripts/screenshot.js",
     "reg-suit": "reg-suit run",
     "serve-screenshots": "http-server dist -i -p 6006"
   },
-  "engines" : {
-    "node" : ">=18",
-    "npm" : ">=9"
+  "engines": {
+    "node": ">=18",
+    "npm": ">=9"
   },
   "browserslist": [
     "last 4 chrome versions",
