--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/user-event": "^14.4.3",
-    "@uqds/alert": "^1.2.0-alpha.0",
     "@vitest/ui": "^1.3.1",
     "cli-progress": "^3.11.2",
     "core-js": "^3.27.2",
@@ -50,6 +49,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
+    "jsdom": "^24.0.0",
     "lerna": "^6.6.2",
     "msw": "^2.2.1",
     "prettier": "2.8.3",
