chore: regression updates

--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -7,21 +7,6 @@
     "layout-container--container": "http://localhost:6006/iframe.html?id=layout-container--container",
     "layout-sections--sections": "http://localhost:6006/iframe.html?id=layout-sections--sections",
     "layout-page-layouts-sidebar--sidebar": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--sidebar",
-    "deprecated-grid--golden": "http://localhost:6006/iframe.html?id=deprecated-grid--golden",
-    "deprecated-grid--halves": "http://localhost:6006/iframe.html?id=deprecated-grid--halves",
-    "deprecated-grid--thirds": "http://localhost:6006/iframe.html?id=deprecated-grid--thirds",
-    "deprecated-grid--quarters": "http://localhost:6006/iframe.html?id=deprecated-grid--quarters",
-    "deprecated-grid--twelve-eight-six-example-1": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-example-1",
-    "deprecated-grid--twelve-eight-six-example-2": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-example-2",
-    "deprecated-grid--twelve-eight-six-mobile": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-mobile",
-    "deprecated-grid--twelve-eight-six-tablet": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-tablet",
-    "deprecated-grid--twelve-eight-six-desktop": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-desktop",
-    "deprecated-grid--twelve-eight-six-nested": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-nested",
-    "deprecated-grid--twelve-eight-six-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-full-width",
-    "deprecated-grid--flexible-1": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-1",
-    "deprecated-grid--flexible-2": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-2",
-    "deprecated-grid--flexible-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-full-width",
-    "deprecated-grid--layout-container": "http://localhost:6006/iframe.html?id=deprecated-grid--layout-container",
     "components-section--section": "http://localhost:6006/iframe.html?id=components-section--section",
     "components-components-section--shaded": "http://localhost:6006/iframe.html?id=components-section--shaded",
     "components-section--container": "http://localhost:6006/iframe.html?id=components-section--container",
@@ -174,7 +159,7 @@
     "patterns-form-validation--empty-form-submit-example": "http://localhost:6006/iframe.html?id=patterns-form-validation--empty-form-submit-example",
     "patterns-form-validation--password-form": "http://localhost:6006/iframe.html?id=patterns-form-validation--password-form",
     "patterns-basic-page--basic-page": "http://localhost:6006/iframe.html?id=patterns-basic-page--basic-page",
-    "gallery-examples-kitchen-sink--kitchen-sink": "http://localhost:6006/iframe.html?id=gallery-examples-kitchen-sink--kitchen-sink",
+    "patterns-kitchen-sink--kitchen-sink": "http://localhost:6006/iframe.html?id=gallery-examples-kitchen-sink--kitchen-sink",
     "deliverables-uq-maps-1-live-data-indicator--live-data-indicator": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-1-live-data-indicator--live-data-indicator",
     "deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants",
     "deliverables-uq-maps-2-search-field--search-field": "http://localhost:6006/iframe.html?id=deliverables-uq-maps-2-search-field--search-field",
@@ -195,8 +180,23 @@
     "templates-home--home": "http://localhost:6006/iframe.html?id=templates-home--home",
     "templates-level-1--level-1": "http://localhost:6006/iframe.html?id=templates-level-1--level-1",
     "templates-level-2--level-2": "http://localhost:6006/iframe.html?id=templates-level-2--level-2",
-    "legacy-footer--footer": "http://localhost:6006/iframe.html?id=legacy-footer--footer",
-    "legacy-header--header": "http://localhost:6006/iframe.html?id=legacy-header--header"
+    "deprecated-footer--footer": "http://localhost:6006/iframe.html?id=legacy-footer--footer",
+    "deprecated-header--header": "http://localhost:6006/iframe.html?id=legacy-header--header",
+    "deprecated-grid--golden": "http://localhost:6006/iframe.html?id=deprecated-grid--golden",
+    "deprecated-grid--halves": "http://localhost:6006/iframe.html?id=deprecated-grid--halves",
+    "deprecated-grid--thirds": "http://localhost:6006/iframe.html?id=deprecated-grid--thirds",
+    "deprecated-grid--quarters": "http://localhost:6006/iframe.html?id=deprecated-grid--quarters",
+    "deprecated-grid--twelve-eight-six-example-1": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-example-1",
+    "deprecated-grid--twelve-eight-six-example-2": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-example-2",
+    "deprecated-grid--twelve-eight-six-mobile": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-mobile",
+    "deprecated-grid--twelve-eight-six-tablet": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-tablet",
+    "deprecated-grid--twelve-eight-six-desktop": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-desktop",
+    "deprecated-grid--twelve-eight-six-nested": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-nested",
+    "deprecated-grid--twelve-eight-six-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--twelve-eight-six-full-width",
+    "deprecated-grid--flexible-1": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-1",
+    "deprecated-grid--flexible-2": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-2",
+    "deprecated-grid--flexible-full-width": "http://localhost:6006/iframe.html?id=deprecated-grid--flexible-full-width",
+    "deprecated-grid--layout-container": "http://localhost:6006/iframe.html?id=deprecated-grid--layout-container"
   },
   "viewports": {
     "mobile": { "width": 375, "height": 932 },
