--- a/regconfig.json
+++ b/regconfig.json
@@ -16,7 +16,7 @@
       "privateToken": "$UQDS_PERSONAL_ACCESS_TOKEN"
     },
     "reg-publish-s3-plugin": {
-      "bucketName": "$AWS_S3_BUCKET_TOOLS"
+      "bucketName": "uq-ds-regsuit"
     },
     "reg-keygen-git-hash-plugin": {}
   }
