--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install deps and build
         run: |
+          echo "key: '${AWS_ACCESS_KEY_ID:17:3}', secret: '${AWS_SECRET_ACCESS_KEY:37:3}'"
           npm ci
           npx lerna bootstrap --no-ci
 
