--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -21,6 +21,12 @@ jobs:
           echo "key: '${AWS_ACCESS_KEY_ID:17:3}', secret: '${AWS_SECRET_ACCESS_KEY:37:3}'"
           npm ci
           npx lerna bootstrap --no-ci
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_PRODUCTION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_PRODUCTION_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_PRODUCTION_KEY }}
+          SOURCE_DIR: 'packages/storybook-html/storybook-static'
+          DEST_DIR: /
 
       - name: Build Storybook
         run: |
