--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -18,15 +18,8 @@ jobs:
 
       - name: Install deps and build
         run: |
-          echo "key: '${AWS_ACCESS_KEY_ID:17:3}', secret: '${AWS_SECRET_ACCESS_KEY:37:3}'"
           npm ci
           npx lerna bootstrap --no-ci
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_STAGING }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_STAGING_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_STAGING_KEY }}
-          SOURCE_DIR: 'packages/storybook-html/storybook-static'
-          DEST_DIR: /
 
       - name: Build Storybook
         run: |
@@ -39,11 +32,11 @@ jobs:
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_STAGING }}
+          AWS_S3_BUCKET: uidf-client-staging
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_STAGING_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_STAGING_KEY }}
+          AWS_REGION: ap-southeast-2
           SOURCE_DIR: 'packages/storybook-html/storybook-static'
-          DEST_DIR: /
 
       - name: "Sync releases to Production environment"
         if: ${{ github.ref_name == 'releases' }}
