--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -30,13 +30,13 @@ jobs:
         if: ${{ github.ref_name == 'master' }}
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --follow-symlinks --delete
+          args: --acl public-read --follow-symlinks
         env:
-          AWS_S3_BUCKET: uidf-client-staging
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_STAGING_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_STAGING_KEY }}
-          AWS_REGION: ap-southeast-2
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_TOOLS }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SOURCE_DIR: 'packages/storybook-html/storybook-static'
+          DEST_DIR: storybook-preview/test
 
       - name: "Sync releases to Production environment"
         if: ${{ github.ref_name == 'releases' }}
