--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -30,13 +30,13 @@ jobs:
         if: ${{ github.ref_name == 'master' }}
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --follow-symlinks
+          args: --follow-symlinks --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_PRODUCTION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_PRODUCTION_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_PRODUCTION_KEY }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_STAGING }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_STAGING_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_STAGING_KEY }}
           SOURCE_DIR: 'packages/storybook-html/storybook-static'
-          DEST_DIR: storybook-preview/test
+          DEST_DIR: /
 
       - name: "Sync releases to Production environment"
         if: ${{ github.ref_name == 'releases' }}
@@ -49,3 +49,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_PRODUCTION_KEY }}
           SOURCE_DIR: 'packages/storybook-html/storybook-static'
           DEST_DIR: /
+
