--- a/packages/hero/package.json
+++ b/packages/hero/package.json
@@ -29,6 +29,7 @@
     "src/*",
     "dist/*"
   ],
+  "style": "dist/css/main.css",
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
