--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -36,7 +36,8 @@
       "import": "./dist/mjs/index.js",
       "require": "./dist/js/uqds.js"
     },
-    "./src/*": "./src/*.js"
+    "./src/js/*": "./src/js/*",
+    "./src/scss/*": "./src/scss/*"
   },
   "style": "dist/css/main.css",
   "scripts": {
