--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -29,7 +29,7 @@
       "import": "./dist/mjs/index.js",
       "require": "./dist/js/uqds.js"
     },
-    "./src/js/*": "./src/js/*",
+    "./src/js/*": "./src/js/*.js",
     "./src/scss/*": "./src/scss/*"
   },
   "style": "dist/css/main.css",
