--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare && gulp -f ./gulpfile.js --cwd=. prepare"
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
@@ -25,24 +25,6 @@
     "node": ">=13.2.0"
   },
   "engineStrict": true,
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/stream": "^3.0.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2",
-    "rollup": "^3.12.0",
-    "sass": "^1.58.0",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
-  },
   "dependencies": {
     "@uqds/accordion": "^1.1.0-alpha.1",
     "@uqds/alert": "^1.2.0-alpha.1",
@@ -61,8 +43,10 @@
     "@uqds/header-legacy": "^0.1.0-alpha.0",
     "@uqds/hero": "^1.0.0-alpha.1",
     "@uqds/icon": "^0.0.15-alpha.2",
+    "@uqds/layout": "^1.0.0-alpha.6",
     "@uqds/lists": "^0.1.0-alpha.0",
     "@uqds/loading-spinner": "^0.1.0-alpha.0",
+    "@uqds/navigation": "^1.0.0-alpha.3",
     "@uqds/pagination": "^0.1.0-alpha.0",
     "@uqds/pane": "^0.1.0-alpha.0",
     "@uqds/previous-next": "^0.1.0-alpha.0",
