fix: Minor tweaks git workflow, svgdom, gulp dependancy

--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Install deps and build
         run: |
-          npm ci
-          npx lerna bootstrap --no-ci
+          npm install
 
       - name: Build Storybook
         run: |
