--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -53,7 +53,7 @@
     "js-yaml": "^3.14.1",
     "mini-svg-data-uri": "^1.2.3",
     "sass": "^1.30.0",
-    "svgdom": "^0.1.8",
+    "svgdom": "0.1.14",
     "svgo": "^1.3.2"
   }
 }
