--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -51,7 +51,7 @@
     "glob": "^7.1.6",
     "js-yaml": "^3.14.0",
     "mini-svg-data-uri": "^1.2.3",
-    "svgdom": "^0.1.8",
+    "svgdom": "0.1.14",
     "svgo": "^1.3.2"
   }
 }
