build: workflow consistency

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,24 +9,22 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: 🛑 Cancel Previous Runs
+      - name: "🛑 Cancel Previous Runs"
         uses: styfle/cancel-workflow-action@0.11.0
 
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
+      - name: "⬇️ Checkout repo"
+        uses: actions/checkout@v4
 
-      - name: ⎔ Setup node
+      - name: "⎔ Setup node 18"
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: 📥 Download deps
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: false
+      - name: "📦️ Install dependencies"
+        run: npm install
 
-      - name: 🧹 Linting
+      - name: "🧹 Linting"
         run: npm run lint
 
-      - name: ✅ Tests
+      - name: "✅ Tests"
         run: npm run test
