fix: Storybook 7 Tweaks (#500)
* docs: sb7 tweaks to local nav stories

* fix: correct package.json exports for js/css

* fix: package conditional exports

* docs: fix mdx and make breadcrumb story autoplay

* fix: private-design-output package

* style: fix lint

* fix spacing, ignore gulp file eslint

* fix: Minor tweaks git workflow, svgdom, gulp dependancy

* chore: update packages

* chore: readme update and temp svgdom dependacy conflict

* build: workflow consistency

* docs: some more fixes for hero, section, card-grid and homepage

* lint: fix prettier

---------

Co-authored-by: uqbcrunk <b.crunkhorn@uq.edu.au>

--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -8,20 +8,18 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: "⬇️ Checkout repo"
         uses: actions/checkout@v4
 
-      - name: Use Node 18
+      - name: "⎔ Setup node 18"
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install deps and build
-        run: |
-          npm ci
-          npx lerna bootstrap --no-ci
+      - name: "📦️ Install dependencies and build"
+        run: npm install
 
-      - name: Build Storybook
+      - name: "Build Storybook"
         run: |
           npm run build-storybook
         working-directory: packages/storybook-html/
