--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -40,6 +40,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.0"
+    "@uqds/core": "^1.2.0-alpha.0",
+    "@uqds/icon": "^0.0.15-alpha.3"
   }
 }
