fix: add style exports to package.json

--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -32,6 +32,7 @@
     "src/js/*",
     "src/scss/*"
   ],
+  "style": "dist/css/main.css",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
