--- a/packages/pane/package.json
+++ b/packages/pane/package.json
@@ -29,6 +29,7 @@
     "src/*",
     "dist/*"
   ],
+  "style": "dist/css/main.css",
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
@@ -40,6 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1"
+    "@uqds/core": "^1.2.0-alpha.1",
+    "@uqds/layout": "^1.0.0-alpha.7"
   }
 }
