chore(release):Publish
 - @uqds/accordion@1.1.1
 - @uqds/alert@1.2.1
 - @uqds/app-maps@0.1.1
 - @uqds/blockquote@0.1.1
 - @uqds/body@0.1.1
 - @uqds/breadcrumb@2.0.1
 - @uqds/button@0.1.1
 - @uqds/card@0.1.1
 - @uqds/core@1.2.1
 - @uqds/footer-legacy@0.1.1
 - @uqds/footer@1.2.1
 - @uqds/form@0.1.1
 - @uqds/grid-menu@0.1.1
 - @uqds/grid@0.0.16
 - @uqds/header-legacy@0.1.1
 - @uqds/header@1.2.1
 - @uqds/hero@1.0.1
 - @uqds/icon@0.0.16
 - @uqds/layout@1.0.1
 - @uqds/lists@0.1.1
 - @uqds/loading-spinner@0.1.1
 - @uqds/navigation@1.0.1
 - @uqds/page-header@0.1.1
 - @uqds/pagination@0.1.1
 - @uqds/pane@0.1.1
 - @uqds/previous-next@0.1.1
 - private-design-output@0.0.16
 - @uqds/progression@0.1.1
 - @uqds/sections@0.1.1
 - @uqds/side-nav@0.1.1
 - @uqds/site-header@1.2.1
 - storybook-html@1.0.1
 - @uqds/table@0.1.1
 - @uqds/tabs@0.1.1

--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/alert",
-  "version": "1.2.0-alpha.10",
+  "version": "1.2.1",
   "description": "Alert component",
   "keywords": [
     "uqds",
@@ -41,9 +41,9 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/grid": "^0.0.15-alpha.3",
-    "@uqds/icon": "^0.0.15-alpha.10"
+    "@uqds/core": "^1.2.1",
+    "@uqds/grid": "^0.0.16",
+    "@uqds/icon": "^0.0.16"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
