--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/card",
-  "version": "0.1.0-alpha.7",
+  "version": "0.1.1",
   "description": "Card components",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/icon": "^0.0.15-alpha.10",
-    "@uqds/layout": "^1.0.0-alpha.9"
+    "@uqds/core": "^1.2.1",
+    "@uqds/icon": "^0.0.16",
+    "@uqds/layout": "^1.0.1"
   }
 }
