--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "1.1.0-alpha.10",
+  "version": "1.1.1",
   "description": "Accordion component",
   "keywords": [
     "uqds",
@@ -45,8 +45,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/icon": "^0.0.15-alpha.10"
+    "@uqds/core": "^1.2.1",
+    "@uqds/icon": "^0.0.16"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
