--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/form",
-  "version": "0.1.0-alpha.9",
+  "version": "0.1.1",
   "description": "Form element style rules",
   "keywords": [
     "uqds",
@@ -42,8 +42,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/icon": "^0.0.15-alpha.10"
+    "@uqds/core": "^1.2.1",
+    "@uqds/icon": "^0.0.16"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
