--- a/packages/header-legacy/package.json
+++ b/packages/header-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header-legacy",
-  "version": "0.1.0-alpha.8",
+  "version": "0.1.1",
   "description": "Header component",
   "private": true,
   "keywords": [
@@ -35,8 +35,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/grid": "^0.0.15-alpha.3",
-    "@uqds/icon": "^0.0.15-alpha.10"
+    "@uqds/core": "^1.2.1",
+    "@uqds/grid": "^0.0.16",
+    "@uqds/icon": "^0.0.16"
   }
 }
