--- a/packages/hero/package.json
+++ b/packages/hero/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/hero",
-  "version": "1.0.0-alpha.6",
+  "version": "1.0.1",
   "description": "Hero component",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/button": "^0.1.0-alpha.5",
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/grid": "^0.0.15-alpha.3"
+    "@uqds/button": "^0.1.1",
+    "@uqds/core": "^1.2.1",
+    "@uqds/grid": "^0.0.16"
   }
 }
