--- a/packages/lists/package.json
+++ b/packages/lists/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/lists",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.1",
   "description": "The list component package",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1"
+    "@uqds/core": "^1.2.1"
   }
 }
