--- a/packages/pane/package.json
+++ b/packages/pane/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/pane",
-  "version": "0.1.0-alpha.5",
+  "version": "0.1.1",
   "description": "Pane component",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/layout": "^1.0.0-alpha.9"
+    "@uqds/core": "^1.2.1",
+    "@uqds/layout": "^1.0.1"
   }
 }
