--- a/packages/site-header/package.json
+++ b/packages/site-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/site-header",
-  "version": "1.2.0-alpha.8",
+  "version": "1.2.1",
   "description": "Site header (title, utility area, and navigation)",
   "keywords": [
     "uqds",
@@ -40,9 +40,9 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1",
-    "@uqds/grid": "^0.0.15-alpha.3",
-    "@uqds/icon": "^0.0.15-alpha.10"
+    "@uqds/core": "^1.2.1",
+    "@uqds/grid": "^0.0.16",
+    "@uqds/icon": "^0.0.16"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
