--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/tabs",
-  "version": "0.1.0-alpha.4",
+  "version": "0.1.1",
   "description": "The tabs component package",
   "keywords": [
     "uqds",
@@ -51,6 +51,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.0-alpha.1"
+    "@uqds/core": "^1.2.1"
   }
 }
