chore(release):Publish
 - @uqds/accordion@1.1.2-alpha.0
 - @uqds/alert@1.2.2-alpha.0
 - @uqds/app-maps@0.1.2-alpha.0
 - @uqds/blockquote@0.1.2-alpha.0
 - @uqds/body@0.1.2-alpha.0
 - @uqds/breadcrumb@2.0.2-alpha.0
 - @uqds/button@0.1.2-alpha.0
 - @uqds/card@0.1.2-alpha.0
 - @uqds/core@1.2.2-alpha.0
 - @uqds/footer-legacy@0.1.2-alpha.0
 - @uqds/footer@1.2.2-alpha.0
 - @uqds/form@0.1.2-alpha.0
 - @uqds/grid-menu@0.1.2-alpha.0
 - @uqds/grid@0.0.17-alpha.0
 - @uqds/header-legacy@0.1.2-alpha.0
 - @uqds/header@1.2.2-alpha.0
 - @uqds/hero@1.0.2-alpha.0
 - @uqds/icon@0.0.17-alpha.0
 - @uqds/layout@1.0.2-alpha.0
 - @uqds/lists@0.1.2-alpha.0
 - @uqds/loading-spinner@0.1.2-alpha.0
 - @uqds/navigation@1.0.2-alpha.0
 - @uqds/page-header@0.1.2-alpha.0
 - @uqds/pagination@0.1.2-alpha.0
 - @uqds/pane@0.1.2-alpha.0
 - @uqds/previous-next@0.1.2-alpha.0
 - private-design-output@0.0.17-alpha.0
 - @uqds/progression@0.1.2-alpha.0
 - @uqds/sections@0.1.2-alpha.0
 - @uqds/side-nav@0.1.2-alpha.0
 - @uqds/site-header@1.2.2-alpha.0
 - storybook-html@1.0.2-alpha.0
 - @uqds/table@0.1.2-alpha.0
 - @uqds/tabs@0.1.2-alpha.0

--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "1.1.1",
+  "version": "1.1.2-alpha.0",
   "description": "Accordion component",
   "keywords": [
     "uqds",
@@ -45,8 +45,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.1",
-    "@uqds/icon": "^0.0.16"
+    "@uqds/core": "^1.2.2-alpha.0",
+    "@uqds/icon": "^0.0.17-alpha.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
