--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/form",
-  "version": "0.1.1",
+  "version": "0.1.2-alpha.0",
   "description": "Form element style rules",
   "keywords": [
     "uqds",
@@ -42,8 +42,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.1",
-    "@uqds/icon": "^0.0.16"
+    "@uqds/core": "^1.2.2-alpha.0",
+    "@uqds/icon": "^0.0.17-alpha.0"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
