--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid",
-  "version": "0.0.16",
+  "version": "0.0.17-alpha.0",
   "description": "Grid CSS",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.1"
+    "@uqds/core": "^1.2.2-alpha.0"
   }
 }
