chore(release):Publish
 - @uqds/accordion@1.1.3
 - @uqds/alert@1.2.3
 - @uqds/app-maps@0.1.3
 - @uqds/blockquote@0.1.3
 - @uqds/body@0.1.3
 - @uqds/breadcrumb@2.0.3
 - @uqds/button@0.1.3
 - @uqds/card@0.1.3
 - @uqds/core@1.2.3
 - @uqds/footer-legacy@0.1.3
 - @uqds/footer@1.2.3
 - @uqds/form@0.1.3
 - @uqds/grid-menu@0.1.3
 - @uqds/grid@0.0.18
 - @uqds/header-legacy@0.1.3
 - @uqds/header@1.2.3
 - @uqds/hero@1.0.3
 - @uqds/icon@0.0.18
 - @uqds/layout@1.0.3
 - @uqds/lists@0.1.3
 - @uqds/loading-spinner@0.1.3
 - @uqds/navigation@1.0.3
 - @uqds/page-header@0.1.3
 - @uqds/pagination@0.1.3
 - @uqds/pane@0.1.3
 - @uqds/previous-next@0.1.3
 - private-design-output@0.0.18
 - @uqds/progression@0.1.3
 - @uqds/sections@0.1.3
 - @uqds/side-nav@0.1.3
 - @uqds/site-header@1.2.3
 - storybook-html@1.0.3
 - @uqds/table@0.1.3
 - @uqds/tabs@0.1.3

--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/card",
-  "version": "0.1.2-alpha.3",
+  "version": "0.1.3",
   "description": "Card components",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.2-alpha.0",
-    "@uqds/icon": "^0.0.17-alpha.0",
-    "@uqds/layout": "^1.0.2-alpha.2"
+    "@uqds/core": "^1.2.3",
+    "@uqds/icon": "^0.0.18",
+    "@uqds/layout": "^1.0.3"
   }
 }
