--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/app-maps",
-  "version": "0.1.2-alpha.0",
+  "version": "0.1.3",
   "description": "Application stylesheets for UQ Maps",
   "private": true,
   "keywords": [
@@ -43,8 +43,8 @@
   },
   "dependencies": {
     "@material/circular-progress": "^14.0.0",
-    "@uqds/body": "^0.1.2-alpha.0",
-    "@uqds/core": "^1.2.2-alpha.0"
+    "@uqds/body": "^0.1.3",
+    "@uqds/core": "^1.2.3"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
