--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid-menu",
-  "version": "0.1.2-alpha.0",
+  "version": "0.1.3",
   "description": "Grid menu components",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.2-alpha.0",
-    "@uqds/icon": "^0.0.17-alpha.0"
+    "@uqds/core": "^1.2.3",
+    "@uqds/icon": "^0.0.18"
   }
 }
