--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "1.2.2-alpha.0",
+  "version": "1.2.3",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -37,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.2-alpha.0",
-    "@uqds/form": "^0.1.2-alpha.0",
-    "@uqds/grid": "^0.0.17-alpha.0",
-    "@uqds/icon": "^0.0.17-alpha.0"
+    "@uqds/core": "^1.2.3",
+    "@uqds/form": "^0.1.3",
+    "@uqds/grid": "^0.0.18",
+    "@uqds/icon": "^0.0.18"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
