--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/icon",
-  "version": "0.0.17-alpha.0",
+  "version": "0.0.18",
   "description": "Icon component",
   "keywords": [
     "uqds",
@@ -50,7 +50,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.2-alpha.0"
+    "@uqds/core": "^1.2.3"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.1.2",
