--- a/packages/sections/package.json
+++ b/packages/sections/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/sections",
-  "version": "0.1.2-alpha.2",
+  "version": "0.1.3",
   "description": "page sections",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.2-alpha.0"
+    "@uqds/core": "^1.2.3"
   }
 }
