--- a/packages/site-header/package.json
+++ b/packages/site-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/site-header",
-  "version": "1.2.2-alpha.1",
+  "version": "1.2.3",
   "description": "Site header (title, utility area, and navigation)",
   "keywords": [
     "uqds",
@@ -40,9 +40,9 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.2-alpha.0",
-    "@uqds/grid": "^0.0.17-alpha.0",
-    "@uqds/icon": "^0.0.17-alpha.0"
+    "@uqds/core": "^1.2.3",
+    "@uqds/grid": "^0.0.18",
+    "@uqds/icon": "^0.0.18"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
