--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "1.0.2-alpha.9",
+  "version": "1.0.3",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -34,38 +34,38 @@
     "@storybook/manager-api": "^7.6.17",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/theming": "^7.6.17",
-    "@uqds/accordion": "^1.1.2-alpha.0",
-    "@uqds/alert": "^1.2.2-alpha.0",
-    "@uqds/app-maps": "^0.1.2-alpha.0",
-    "@uqds/blockquote": "^0.1.2-alpha.0",
-    "@uqds/body": "^0.1.2-alpha.0",
-    "@uqds/breadcrumb": "^2.0.2-alpha.1",
-    "@uqds/button": "^0.1.2-alpha.0",
-    "@uqds/card": "^0.1.2-alpha.3",
-    "@uqds/core": "^1.2.2-alpha.0",
-    "@uqds/footer": "^1.2.2-alpha.0",
-    "@uqds/footer-legacy": "^0.1.2-alpha.0",
-    "@uqds/form": "^0.1.2-alpha.0",
-    "@uqds/grid": "^0.0.17-alpha.0",
-    "@uqds/grid-menu": "^0.1.2-alpha.0",
-    "@uqds/header": "^1.2.2-alpha.0",
-    "@uqds/header-legacy": "^0.1.2-alpha.0",
-    "@uqds/hero": "^1.0.2-alpha.3",
-    "@uqds/icon": "^0.0.17-alpha.0",
-    "@uqds/layout": "^1.0.2-alpha.2",
-    "@uqds/lists": "^0.1.2-alpha.0",
-    "@uqds/loading-spinner": "^0.1.2-alpha.0",
-    "@uqds/navigation": "^1.0.2-alpha.1",
-    "@uqds/page-header": "^0.1.2-alpha.0",
-    "@uqds/pagination": "^0.1.2-alpha.0",
-    "@uqds/pane": "^0.1.2-alpha.2",
-    "@uqds/previous-next": "^0.1.2-alpha.0",
-    "@uqds/progression": "^0.1.2-alpha.0",
-    "@uqds/sections": "^0.1.2-alpha.2",
-    "@uqds/side-nav": "^0.1.2-alpha.0",
-    "@uqds/site-header": "^1.2.2-alpha.1",
-    "@uqds/table": "^0.1.2-alpha.0",
-    "@uqds/tabs": "^0.1.2-alpha.0",
+    "@uqds/accordion": "^1.1.3",
+    "@uqds/alert": "^1.2.3",
+    "@uqds/app-maps": "^0.1.3",
+    "@uqds/blockquote": "^0.1.3",
+    "@uqds/body": "^0.1.3",
+    "@uqds/breadcrumb": "^2.0.3",
+    "@uqds/button": "^0.1.3",
+    "@uqds/card": "^0.1.3",
+    "@uqds/core": "^1.2.3",
+    "@uqds/footer": "^1.2.3",
+    "@uqds/footer-legacy": "^0.1.3",
+    "@uqds/form": "^0.1.3",
+    "@uqds/grid": "^0.0.18",
+    "@uqds/grid-menu": "^0.1.3",
+    "@uqds/header": "^1.2.3",
+    "@uqds/header-legacy": "^0.1.3",
+    "@uqds/hero": "^1.0.3",
+    "@uqds/icon": "^0.0.18",
+    "@uqds/layout": "^1.0.3",
+    "@uqds/lists": "^0.1.3",
+    "@uqds/loading-spinner": "^0.1.3",
+    "@uqds/navigation": "^1.0.3",
+    "@uqds/page-header": "^0.1.3",
+    "@uqds/pagination": "^0.1.3",
+    "@uqds/pane": "^0.1.3",
+    "@uqds/previous-next": "^0.1.3",
+    "@uqds/progression": "^0.1.3",
+    "@uqds/sections": "^0.1.3",
+    "@uqds/side-nav": "^0.1.3",
+    "@uqds/site-header": "^1.2.3",
+    "@uqds/table": "^0.1.3",
+    "@uqds/tabs": "^0.1.3",
     "babel-loader": "^8.2.3",
     "core-js": "^3.21.0",
     "font-awesome": "^4.7.0",
