--- a/packages/footer-legacy/package.json
+++ b/packages/footer-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer-legacy",
-  "version": "0.1.3",
+  "version": "0.1.4-alpha.0",
   "description": "The UQ footer component package",
   "private": true,
   "keywords": [
@@ -35,7 +35,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.3",
-    "@uqds/grid": "^0.0.18"
+    "@uqds/core": "^1.2.4-alpha.0",
+    "@uqds/grid": "^0.0.19-alpha.0"
   }
 }
