--- a/packages/hero/package.json
+++ b/packages/hero/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/hero",
-  "version": "1.0.3",
+  "version": "1.0.4-alpha.0",
   "description": "Hero component",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/button": "^0.1.3",
-    "@uqds/core": "^1.2.3",
-    "@uqds/grid": "^0.0.18"
+    "@uqds/button": "^0.1.4-alpha.0",
+    "@uqds/core": "^1.2.4-alpha.0",
+    "@uqds/grid": "^0.0.19-alpha.0"
   }
 }
