--- a/packages/previous-next/package.json
+++ b/packages/previous-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/previous-next",
-  "version": "0.1.3",
+  "version": "0.1.4-alpha.0",
   "description": "Previous Next component",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.3",
-    "@uqds/icon": "^0.0.18"
+    "@uqds/core": "^1.2.4-alpha.0",
+    "@uqds/icon": "^0.0.19-alpha.0"
   }
 }
