--- a/packages/progression/package.json
+++ b/packages/progression/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/progression",
-  "version": "0.1.3",
+  "version": "0.1.4-alpha.0",
   "description": "Progression component",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uqds/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.3"
+    "@uqds/core": "^1.2.4-alpha.0"
   }
 }
