feat: ITSADSSD-59308: Pill component (#576)
* feat: New pill package

* chore: padding fixes

* chore: updating merge conflict

---------

Co-authored-by: uqbcrunk <b.crunkhorn@uq.edu.au>

--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -132,6 +132,11 @@
     "components-pagination--pagination-middle": "http://localhost:6006/iframe.html?id=components-pagination--pagination-middle",
     "components-pagination--pagination-last": "http://localhost:6006/iframe.html?id=components-pagination--pagination-last",
     "components-pane--all": "http://localhost:6006/iframe.html?id=components-pane--all",
+    "components-pill--link": "http://localhost:6006/iframe.html?id=components-pill-pill--link",
+    "components-pill--checkbox": "http://localhost:6006/iframe.html?id=components-pill-pill--checkbox",
+    "components-pill--radio": "http://localhost:6006/iframe.html?id=components-pill-pill--radio",
+    "components-pill-list--list": "http://localhost:6006/iframe.html?id=components-pill-list--list",
+    "components-pill-list--title": "http://localhost:6006/iframe.html?id=components-pill-list--title",
     "components-previous-next--previous-next-initial": "http://localhost:6006/iframe.html?id=components-previous-next--previous-next-initial",
     "components-previous-next--previous-next-middle": "http://localhost:6006/iframe.html?id=components-previous-next--previous-next-middle",
     "components-previous-next--previous-next-final": "http://localhost:6006/iframe.html?id=components-previous-next--previous-next-final",
